# aoc

./: .gitignore  CMakeLists.txt  README.md  answer.cpp.in  solution.hpp.in
include/aoc/: at_if.hpp  at_last_if.hpp  find_last_if.hpp  is_digit.hpp  less_equal.hpp  list_v.hpp  map_at.hpp  match.hpp  multiplies.hpp  product.hpp  string.hpp  sum.hpp  to.hpp  transform_if_valid.hpp  value.hpp
include/solution/2023/day/1/part/: 1.hpp  2.hpp
include/solution/2023/day/2/part/: 1.hpp  2.hpp
